Module3 solution - optional tasks

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -42,10 +42,10 @@
         </div><!-- /.container-fluid -->
     </nav>
 </header>
-<h1 class="text-center">Ours Menu</h1>
+<h1 id="menu-top" class="text-center">Ours Menu</h1>
 <div id="main-content" class="container">
     <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="menu-item">
                 <h3 class="menu-title" id="chicken-menu">Chicken</h3>
                 <div class="menu-content">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
@@ -67,13 +67,11 @@
                     adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
                     Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
                     consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel
-                    illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                    illum qui dolorem eum fugiat quo voluptas nulla pariatur? <a href="#menu-top">Back To Top</a>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="menu-item">
                 <h3 class="menu-title" id="beef-menu">Beef</h3>
                 <div class="menu-content">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
@@ -95,13 +93,11 @@
                     adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
                     Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
                     consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel
-                    illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                    illum qui dolorem eum fugiat quo voluptas nulla pariatur? <a href="#menu-top">Back To Top</a>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="col-md-4 col-sm-12 col-xs-12">
             <div class="menu-item">
                 <h3 class="menu-title" id="sushi-menu">Sushi</h3>
                 <div class="menu-content">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
@@ -118,7 +114,8 @@
                     dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
                     aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,
                     nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam
-                    nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                    nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? <a href="#menu-top">Back To
+                        Top</a>
                 </div>
             </div>
         </div>
